// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Legacy Content - Peer - Upsert Data Cut should disable the add/updated button when passesGuidelines is false 1`] = `
<pf-upsert-data-cut-page
  companyJobId={[Function Number]}
  companyPayMarketId={[Function Number]}
  cutGuid="null"
  guidelinesService={[Function DojGuidelinesStub]}
  initialMapMoveComplete$={[Function Store]}
  map="undefined"
  mapStore={[Function Store]}
  peerFilterSelections$={[Function Store]}
  peerFilterSubscription={[Function Subscriber]}
  route={[Function Object]}
  store={[Function Store]}
  systemFilter$={[Function Store]}
  upsertDataCutPageInViewInIframe$={[Function Store]}
  upsertingDataCut$={[Function Store]}
  upsertingDataCutError$={[Function Store]}
  userSessionId={[Function Number]}
>
  <pf-async-container>
    <div
      class="d-flex h-100 w-100"
    >
      <div
        class="h-100 filters-container"
      >
        <pf-peer-data-cut-filter-sidebar />
      </div>
      <div
        class="flex-grow-1 d-flex flex-column"
      >
        <div
          class="map-container flex-grow-1"
        >
          
        </div>
        <div
          class="button-container d-flex justify-content-end align-items-center"
        >
          
          <div
            class="buttons"
          >
            <button
              class="btn btn-primary"
              disabled=""
              type="button"
            >
              Add
            </button>
            <button
              class="btn btn-secondary"
              type="button"
            >
              Cancel
            </button>
          </div>
        </div>
      </div>
    </div>
  </pf-async-container>
</pf-upsert-data-cut-page>
`;

exports[`Legacy Content - Peer - Upsert Data Cut should display the upsert data cut page with an Add button 1`] = `
<pf-upsert-data-cut-page
  companyJobId={[Function Number]}
  companyPayMarketId={[Function Number]}
  cutGuid="null"
  guidelinesService={[Function DojGuidelinesStub]}
  initialMapMoveComplete$={[Function Store]}
  map="undefined"
  mapStore={[Function Store]}
  peerFilterSelections$={[Function Store]}
  peerFilterSubscription={[Function Subscriber]}
  route={[Function Object]}
  store={[Function Store]}
  systemFilter$={[Function Store]}
  upsertDataCutPageInViewInIframe$={[Function Store]}
  upsertingDataCut$={[Function Store]}
  upsertingDataCutError$={[Function Store]}
  userSessionId={[Function Number]}
>
  <pf-async-container>
    <div
      class="d-flex h-100 w-100"
    >
      <div
        class="h-100 filters-container"
      >
        <pf-peer-data-cut-filter-sidebar />
      </div>
      <div
        class="flex-grow-1 d-flex flex-column"
      >
        <div
          class="map-container flex-grow-1"
        >
          
        </div>
        <div
          class="button-container d-flex justify-content-end align-items-center"
        >
          
          <div
            class="buttons"
          >
            <button
              class="btn btn-primary"
              type="button"
            >
              Add
            </button>
            <button
              class="btn btn-secondary"
              type="button"
            >
              Cancel
            </button>
          </div>
        </div>
      </div>
    </div>
  </pf-async-container>
</pf-upsert-data-cut-page>
`;

exports[`Legacy Content - Peer - Upsert Data Cut should display the upsert data cut page with an Update button 1`] = `
<pf-upsert-data-cut-page
  companyJobId={[Function Number]}
  companyPayMarketId={[Function Number]}
  cutGuid={[Function String]}
  guidelinesService={[Function DojGuidelinesStub]}
  initialMapMoveComplete$={[Function Store]}
  map="undefined"
  mapStore={[Function Store]}
  peerFilterSelections$={[Function Store]}
  peerFilterSubscription={[Function Subscriber]}
  route={[Function Object]}
  store={[Function Store]}
  systemFilter$={[Function Store]}
  upsertDataCutPageInViewInIframe$={[Function Store]}
  upsertingDataCut$={[Function Store]}
  upsertingDataCutError$={[Function Store]}
  userSessionId={[Function Number]}
>
  <pf-async-container>
    <div
      class="d-flex h-100 w-100"
    >
      <div
        class="h-100 filters-container"
      >
        <pf-peer-data-cut-filter-sidebar />
      </div>
      <div
        class="flex-grow-1 d-flex flex-column"
      >
        <div
          class="map-container flex-grow-1"
        >
          
        </div>
        <div
          class="button-container d-flex justify-content-end align-items-center"
        >
          
          <div
            class="buttons"
          >
            <button
              class="btn btn-primary"
              type="button"
            >
              Update
            </button>
            <button
              class="btn btn-secondary"
              type="button"
            >
              Cancel
            </button>
          </div>
        </div>
      </div>
    </div>
  </pf-async-container>
</pf-upsert-data-cut-page>
`;

exports[`Legacy Content - Peer - Upsert Data Cut should enable the add button when passesGuidelines is true 1`] = `
<pf-upsert-data-cut-page
  companyJobId={[Function Number]}
  companyPayMarketId={[Function Number]}
  cutGuid="null"
  guidelinesService={[Function DojGuidelinesStub]}
  initialMapMoveComplete$={[Function Store]}
  map="undefined"
  mapStore={[Function Store]}
  peerFilterSelections$={[Function Store]}
  peerFilterSubscription={[Function Subscriber]}
  route={[Function Object]}
  store={[Function Store]}
  systemFilter$={[Function Store]}
  upsertDataCutPageInViewInIframe$={[Function Store]}
  upsertingDataCut$={[Function Store]}
  upsertingDataCutError$={[Function Store]}
  userSessionId={[Function Number]}
>
  <pf-async-container>
    <div
      class="d-flex h-100 w-100"
    >
      <div
        class="h-100 filters-container"
      >
        <pf-peer-data-cut-filter-sidebar />
      </div>
      <div
        class="flex-grow-1 d-flex flex-column"
      >
        <div
          class="map-container flex-grow-1"
        >
          
        </div>
        <div
          class="button-container d-flex justify-content-end align-items-center"
        >
          
          <div
            class="buttons"
          >
            <button
              class="btn btn-primary"
              type="button"
            >
              Add
            </button>
            <button
              class="btn btn-secondary"
              type="button"
            >
              Cancel
            </button>
          </div>
        </div>
      </div>
    </div>
  </pf-async-container>
</pf-upsert-data-cut-page>
`;

exports[`Legacy Content - Peer - Upsert Data Cut should enable the update button when passesGuidelines is true 1`] = `
<pf-upsert-data-cut-page
  companyJobId={[Function Number]}
  companyPayMarketId={[Function Number]}
  cutGuid={[Function String]}
  guidelinesService={[Function DojGuidelinesStub]}
  initialMapMoveComplete$={[Function Store]}
  map="undefined"
  mapStore={[Function Store]}
  peerFilterSelections$={[Function Store]}
  peerFilterSubscription={[Function Subscriber]}
  route={[Function Object]}
  store={[Function Store]}
  systemFilter$={[Function Store]}
  upsertDataCutPageInViewInIframe$={[Function Store]}
  upsertingDataCut$={[Function Store]}
  upsertingDataCutError$={[Function Store]}
  userSessionId={[Function Number]}
>
  <pf-async-container>
    <div
      class="d-flex h-100 w-100"
    >
      <div
        class="h-100 filters-container"
      >
        <pf-peer-data-cut-filter-sidebar />
      </div>
      <div
        class="flex-grow-1 d-flex flex-column"
      >
        <div
          class="map-container flex-grow-1"
        >
          
        </div>
        <div
          class="button-container d-flex justify-content-end align-items-center"
        >
          
          <div
            class="buttons"
          >
            <button
              class="btn btn-primary"
              type="button"
            >
              Update
            </button>
            <button
              class="btn btn-secondary"
              type="button"
            >
              Cancel
            </button>
          </div>
        </div>
      </div>
    </div>
  </pf-async-container>
</pf-upsert-data-cut-page>
`;
